--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
       <meta charset=""utf-8>
 </head>
 <body>
+    <!-- ここはヘッダーです -->
     <header>
         <h1>天気予報</h1>
+
     </header>
      <main>
         <h2>今日の天気</h2>
