--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <!-- ここはヘッダーです -->
+     <img src="https://teamsamurai.github.io/html-css-basic-chapter5/assets/images/logo.svg" alt="ロゴ">
     <header>
         <h1>天気予報</h1>
 
