--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <!-- ここはヘッダーです -->
-     <img src="https://teamsamurai.github.io/html-css-basic-chapter5/assets/images/logo.svg" alt="ロゴ">
+     <a href="https://www.sejuku.net">SAMURAIのホームページに移動</a> 
     <header>
         <h1>天気予報</h1>
 
