画像リンクを追加

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <!-- ここはヘッダーです -->
-     <a href="https://www.sejuku.net">SAMURAIのホームページに移動</a> 
+     <a href="company/company.html"> 
+    <img src="assets/images/logo.svg" alt="ロゴ">
+  </a> 
     <header>
         <h1>天気予報</h1>
 
