--- a/selector-elements.html
+++ b/selector-elements.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="selector-elements.css">
   </head>
   <body>
-    <h1 id="first-heading">見出し1です</h1>
-    <p>段落1です</p>
-    <h2>見出し2です</h2>
-    <p id="second-paragraph">段落2です</p>
-    <h3>見出し3です</h3>
-    <p>段落3です</p>
+    <h1 class="heading1">見出し1です</h1>
+    <p class="paragraph1">段落1です</p>
+    <h2 class="heading2">見出し2です</h2>
+    <p class="paragraph2">段落2です</p>
+    <h3 class="heading3">見出し3です</h3>
+    <p class="paragraph3">段落3です</p>
   </body>
 </html>
