--- a/multi-selector.html
+++ b/multi-selector.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>>
+<!DOCTYPE html>
 <html>
     <head>
         <title>タイトルです。</title>
@@ -7,11 +7,11 @@
         <link rel="stylesheet" href="multi-selector.css">
     </head>
     <body>
-        <h1 id="first-heading">見出し1です</h1>
-        <p>段落1です</p>
-        <h2 class="text-red">見出し２です</h2>
-        <p>段落２です</p>
-        <h3>見出し３です</h3>
-        <p>段落3です</p>
+        <div id="parent">
+            <p class="child">子要素の段落です</p>
+            <div class="child">
+                <p id="grandchild">孫要素の段落です</p>
+            </div> 
+        </div>
     </body>
 </html>
