--- a/text-decorations.html
+++ b/text-decorations.html
@@ -10,5 +10,8 @@
     <body>
         <p>文字装飾なしです</p>
         <p class="decoration">文字装飾ありです</p>
+         <p class="decoration">文字装飾2<span class="text-bold">あり</span>です</p>
+  </body>
+</html>
     </body>
 </html>
