--- a/text-decorations.html
+++ b/text-decorations.html
@@ -11,7 +11,17 @@
         <p>文字装飾なしです</p>
         <p class="decoration">文字装飾ありです</p>
          <p class="decoration">文字装飾2<span class="text-bold">あり</span>です</p>
-  </body>
+        <!-- Google Fontsを読み込みます -->
+         <p>デフォルトのフォントです</p>
+         <p class="google-fonts">Google Fontです</p>
+
+         <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap" rel="stylesheet">
+  
+  
+  
+        </body>
 </html>
     </body>
 </html>
