--- a/display-inline.html
+++ b/display-inline.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="display-inline.css">
   </head>
   <body>
-    <p>p要素です。<span id="first-span">1つ目のspan要素です。</span><span id="second-span">2つ目のspan要素です。</span><span id="third-span">3つ目のspan要素です。</span></p>
+    <p>p要素です。<span id="first-span">1つ目のspan要素です。
+
+    </span><span id="second-span">2つ目のspan要素です。</span>
+    <span id="third-span">3つ目のspan要素です。</span></p>
   </body>
 </html>
