--- a/position-relative.html
+++ b/position-relative.html
@@ -8,9 +8,11 @@
        <link rel="stylesheet" href="position-relative.css">
     </head>
     <body>
+        <div class=" parent">
        <div id="first-div"></div>
        <div id="second-div"></div>
        <div id="third-div"></div>
+       </div>
 
 
 </html>
