--- a/position-relative.html
+++ b/position-relative.html
@@ -9,10 +9,9 @@
     </head>
     <body>
         <div class=" parent">
-       <div id="first-div"></div>
-       <div id="second-div"></div>
-       <div id="third-div"></div>
+       <div class="child"></div>
        </div>
+       <div class="background"></div>
 
-
+    </body>
 </html>
